--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "ai": "^6.0.61",
     "dotenv": "^17.2.3",
     "langchain": "^1.2.15",
+    "lru-cache": "^11.2.5",
     "next": "16.1.6",
     "openai": "^6.17.0",
     "pg": "^8.17.2",
     "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "redis": "^5.10.0",
     "viem": "^2.45.0",
     "zod": "^3.25.76"
   },
