ci: add Postgres service, Prisma generate/push, and Foundry tests to workflow
What changed:
- Add services.postgres: image postgres:16, port 5432, health check.
- Steps: npx prisma generate, npx prisma db push with DATABASE_URL=postgresql://test:test@localhost:5432/aegis_test.
- Run tests with DATABASE_URL env; run forge test for contracts.
- Build with DATABASE_URL.

Why:
- Tests require Prisma client + DB; generate + db push ensures schema sync.
- forge test validates Solidity contracts.

Impact:
- CI runs with real Postgres; tests can use DB; requires Foundry in CI runner.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,21 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: test
+          POSTGRES_PASSWORD: test
+          POSTGRES_DB: aegis_test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - uses: actions/checkout@v4
 
@@ -20,6 +35,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Generate Prisma client
+        run: npx prisma generate
+
+      - name: Setup database
+        run: npx prisma db push --accept-data-loss
+        env:
+          DATABASE_URL: postgresql://test:test@localhost:5432/aegis_test
+
       - name: Type check
         run: npm run typecheck
 
@@ -27,10 +50,18 @@ jobs:
         run: npm run lint
 
       - name: Run tests
-        run: npm run test
+        run: npm run test -- --run
+        env:
+          DATABASE_URL: postgresql://test:test@localhost:5432/aegis_test
+
+      - name: Run Foundry contract tests
+        run: forge test
+        working-directory: .
 
       - name: Build
         run: npm run build
+        env:
+          DATABASE_URL: postgresql://test:test@localhost:5432/aegis_test
 
       - name: Upload coverage (optional)
         if: success() && hashFiles('coverage/**') != ''
