--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint",
     "agent:dev": "tsx watch src/lib/agent/index.ts",
     "agent:run": "tsx src/lib/agent/index.ts",
+    "agent:paymaster": "tsx scripts/deploy-autonomous-paymaster.ts",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
@@ -16,6 +17,7 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
+    "register:moltbook": "tsx scripts/register-moltbook.ts",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -27,6 +29,7 @@
     "@langchain/core": "^1.1.17",
     "@langchain/langgraph": "^1.1.2",
     "@langchain/openai": "^1.2.3",
+    "@neynar/nodejs-sdk": "^3.131.0",
     "@pinecone-database/pinecone": "^6.1.4",
     "@prisma/client": "^7.3.0",
     "@tanstack/react-query": "^5.90.20",
