build(foundry): add base RPC and deploy profile with keystore
- Add base RPC endpoint (RPC_URL_BASE)
- Add [profile.deploy] with FOUNDRY_ACCOUNT for keystore-based deploy
- Enables cast wallet import and forge create --account

--- a/foundry.toml
+++ b/foundry.toml
@@ -11,3 +11,9 @@ line_length = 100
 
 [rpc_endpoints]
 base_sepolia = "${RPC_URL_BASE_SEPOLIA}"
+base = "${RPC_URL_BASE}"
+
+# Keystore configuration (optional - can also use --account flag directly)
+[profile.deploy]
+# Account name to use from ~/.foundry/keystores/
+account = "${FOUNDRY_ACCOUNT:-deployer-onetruehmie}"
