feat(build): add deploy:reactive-observer, deploy:all, foundry:setup-keystore
- deploy:reactive-observer and deploy:all scripts
- foundry:setup-keystore hint for cast wallet import
- Enables full contract deploy workflow

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "agent:run": "tsx src/lib/agent/index.ts",
     "agent:paymaster": "tsx scripts/deploy-autonomous-paymaster.ts",
     "deploy:activity-logger": "tsx scripts/deploy-activity-logger.ts",
+    "deploy:reactive-observer": "tsx scripts/deploy-reactive-observer.ts",
+    "deploy:all": "tsx scripts/deploy-contracts.ts",
+    "foundry:setup-keystore": "echo 'Run: cast wallet import deployer-onetruehmie --interactive'",
     "test:farcaster": "tsx scripts/test-farcaster.ts",
     "test": "vitest",
     "test:ui": "vitest --ui",
