feat(build): add env:merge script
- env:merge runs scripts/merge-env.ts
- Enables merging env files for deployment

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "db:studio": "prisma studio",
     "db:seed": "prisma db seed",
     "register:moltbook": "tsx scripts/register-moltbook.ts",
+    "env:merge": "tsx scripts/merge-env.ts",
     "typecheck": "tsc --noEmit"
   },
   "prisma": {
