--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@langchain/openai": "^1.2.3",
     "@neynar/nodejs-sdk": "^3.131.0",
     "@pinecone-database/pinecone": "^6.1.4",
+    "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@tanstack/react-query": "^5.90.20",
     "ai": "^6.0.61",
