--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "db:studio": "prisma studio",
     "db:seed": "prisma db seed",
     "register:moltbook": "tsx scripts/register-moltbook.ts",
+    "agent:report": "tsx scripts/agent-activity-report.ts",
     "env:merge": "tsx scripts/merge-env.ts",
     "typecheck": "tsc --noEmit"
   },
