docs(env): add KEYSTORE_ACCOUNT, KEYSTORE_PASSWORD, CAST_PASSWORD to field template
- Document Foundry keystore option for agent wallet
- Impact: field.env.template only

--- a/field.env.template
+++ b/field.env.template
@@ -7,6 +7,9 @@
 # ============================================
 DATABASE_URL=""
 OPENAI_API_KEY=""
+# Agent wallet: use Foundry keystore (recommended) or raw key
+KEYSTORE_ACCOUNT=""
+KEYSTORE_PASSWORD=""
 EXECUTE_WALLET_PRIVATE_KEY=""
 AGENT_PRIVATE_KEY=""
 RPC_URL_BASE_SEPOLIA=""
@@ -51,6 +54,7 @@ RPC_URL_SEPOLIA=""
 # Deploy (Foundry / deployer)
 # ============================================
 FOUNDRY_ACCOUNT=""
+CAST_PASSWORD=""
 DEPLOYER_PRIVATE_KEY=""
 BASESCAN_API_KEY=""
 
