--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@coinbase/cdp-agentkit-core": "^0.0.14",
     "@coinbase/cdp-sdk": "^1.43.1",
     "@coinbase/x402": "^2.1.0",
+    "@hookform/resolvers": "^5.2.2",
     "@langchain/anthropic": "^1.3.12",
     "@langchain/core": "^1.1.17",
     "@langchain/langgraph": "^1.1.2",
@@ -46,11 +47,15 @@
     "@pinecone-database/pinecone": "^6.1.4",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-query": "^5.90.20",
     "ai": "^6.0.61",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "langchain": "^1.2.15",
     "lru-cache": "^11.2.5",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "openai": "^6.17.0",
     "permissionless": "^0.3.4",
@@ -58,7 +63,9 @@
     "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
     "redis": "^5.10.0",
+    "tailwind-merge": "^3.4.0",
     "viem": "^2.45.0",
     "zod": "^3.25.76"
   },
