chore(deps): add agent:check-key script for key availability check
- New script target: tsx scripts/check-key-pickup.ts.
- Impact: npm run agent:check-key for local or Railway key verification.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "eslint",
     "agent:start": "tsx scripts/run-agent.ts",
+    "agent:check-key": "tsx scripts/check-key-pickup.ts",
     "agent:sponsorship-only": "tsx scripts/deploy-autonomous-paymaster.ts",
     "agent:dev": "tsx watch src/lib/agent/index.ts",
     "agent:run": "tsx src/lib/agent/index.ts",
