--- a/package.json
+++ b/package.json
@@ -71,9 +71,9 @@
     "react-hook-form": "^7.71.1",
     "redis": "^5.10.0",
     "tailwind-merge": "^3.4.0",
+    "tsx": "^4.21.0",
     "viem": "^2.45.0",
-    "zod": "^3.25.76",
-    "tsx": "^4.21.0"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -83,6 +83,7 @@
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/coverage-v8": "^4.0.18",
     "@vitest/ui": "^4.0.18",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
