--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "agent:report": "tsx scripts/agent-activity-report.ts",
     "env:merge": "tsx scripts/merge-env.ts",
     "check:redis": "tsx scripts/check-redis.ts",
+    "check:db": "tsx scripts/check-db.ts",
     "typecheck": "tsc --noEmit"
   },
   "prisma": {
@@ -71,9 +72,9 @@
     "react-hook-form": "^7.71.1",
     "redis": "^5.10.0",
     "tailwind-merge": "^3.4.0",
-    "tsx": "^4.21.0",
     "viem": "^2.45.0",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "tsx": "^4.21.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -83,7 +84,6 @@
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@vitest/coverage-v8": "^4.0.18",
     "@vitest/ui": "^4.0.18",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
