chore(deps): add vercel env sync npm scripts
- vercel:env:sync - push .env vars to Vercel (allowed keys only)
- vercel:env:dry - dry-run list of keys that would be synced

--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "env:merge": "tsx scripts/merge-env.ts",
     "check:redis": "tsx scripts/check-redis.ts",
     "check:db": "tsx scripts/check-db.ts",
+    "vercel:env:sync": "tsx scripts/sync-vercel-env.ts",
+    "vercel:env:dry": "tsx scripts/sync-vercel-env.ts --dry-run",
     "typecheck": "tsc --noEmit"
   },
   "prisma": {
